# Maklai_test

./: README.md  app.py  pyproject.toml
src/: __init__.py  config.py
src/routes/: __init__.py  healtcheck.py  paraphrase.py
src/schema/: healtcheck.py  paraphrase.py
src/services/: __init__.py
src/services/paraphrase/: __init__.py  main.py
tests/: conftest.py  test_paraphrase.py
